[gd_scene load_steps=2 format=3 uid="uid://8qgn1a7jh68g"]

[ext_resource type="Script" path="res://Scripts/Crafting/Crafting.gd" id="1_xfwer"]

[node name="Crafting" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.0
offset_right = -798.0
offset_bottom = -398.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xfwer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="BonfireButton" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "
Bonfire
 "

[node name="TentButton" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Tent"

[node name="Plant1Button" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "
Plant 1

"

[node name="Plant2Button" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Plant 2"

[node name="LanternButton" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "
Lantern

"

[node name="TableButton" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Table"

[node name="CabinButton" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "
Cabin

"

[node name="CabinLargeButton" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "
Large Cabin

"

[connection signal="pressed" from="MarginContainer/GridContainer/BonfireButton" to="." method="_on_bonfire_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TentButton" to="." method="_on_tent_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/Plant1Button" to="." method="_on_plant_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/Plant2Button" to="." method="_on_plant_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/LanternButton" to="." method="_on_lantern_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TableButton" to="." method="_on_table_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/CabinButton" to="." method="_on_cabin_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/CabinLargeButton" to="." method="_on_cabin_large_button_pressed"]
